--- a/about.html
+++ b/about.html
@@ -1,1 +1,21 @@
-blank
+    This project classifies images of brain scans based on the type of tumor present. The tumor classifications are: no tumor, glioma tumor, meningioma tumor, 
+and pituitary tumor. The images are fed through a convolutional neural network as arrays to allow for asociations to be made for proper classification. 
+The images are appended into lists as x train, y train and x test, y test based on their respective folders. The images are then converted to numpy arrays 
+for further processing. The data is split into training and testing sets and the y train and y test are encoded with integer labels. The CNN begins with two 
+sets of Conv2D and AveragePooling2D layers with rectified lineal unit (relu) on both convolution layers. Next the data is flattened and input to a relu dense 
+layer containing 128 neurons. A dropout layer is present after with a rate of 0.68 (the rate is high due to overfitting issues). The last processing occurs in
+a 4 neuron softmax dense layer. The model compiler is optimized with NAdam and loss of Categorical Crossentropy. 
+
+After 9 epochs the results were:
+  loss: 0.1838 - accuracy: 0.9346 - val_loss: 0.3201 - val_accuracy: 0.8803
+
+With a classification report of:
+                      Precision     Recall      f1-score      Support
+0 (no tumor)              0.93        0.89          0.91         97
+1 (glioma tumor)          0.81        0.73          0.77         41
+2 (meningioma tumor)      0.72        0.86          0.78         71
+3 (pituitary tumor)       1.00        0.94          0.97         78
+
+            Accuracy                                0.87        287
+           Macro Avg     0.87         0.85          0.86        287
+        Weighted Avg     0.88         0.87          0.87        287
